Nav bar always visible and home button fixed

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -11,14 +11,14 @@ a{color:#404040;}
 a:hover,
 a:focus{color:#0085a1;}
 a img:hover,
-a img:focus{cursor:zoom-in;}
+a img:focus{cursor:pointer;}
 blockquote{color:#808080;font-style:italic;}
 hr.small{max-width:100px;margin:15px auto;border-width:4px;border-color:white;}
 .navbar-custom{background:white;position:absolute;top:0;left:0;width:100%;z-index:3;font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;}
 .navbar-custom .navbar-brand{font-weight:800;}
 .navbar-custom .nav li a{text-transform:uppercase;font-size:12px;font-weight:800;letter-spacing:1px;}
 @media only screen and (min-width:768px){.navbar-custom{background:transparent;border-bottom:1px solid transparent;}
-.navbar-custom .navbar-brand{color:white;padding:20px;}
+.navbar-custom .navbar-brand{color:white;padding:6px;}
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus{color:rgba(255, 255, 255, 0.8);}
 .navbar-custom .nav li a{color:white;padding:20px;}
